    Support managing instance providers & their types (#395)
    Toggle admin status (#394)
    Toggle login status (#400)

Changed
    Store all dates in UTC (#370)
    Display dates in UTC (#370)
    Run cron jobs at time specified by timezone setting (#372)

Fixed
    Enforcing backup retention limit
    Typo in the reset admin password docs (#410)

Breaking API Changes
    Change response of GetInstanceTypes api

0.12.0 - 15/04/2020

Changed
    Instance's will now be deleted after a migration
    Site title based on user input or default of "LXD Mosaic" (#239)

Added
    Tooltips to buttons in the navigation bar (#342)
    Cron job to gather project analytics (#314)
    Option to load vm console in its own tab (#324)
    View in settings to download old analytics data (#315)
    Network dashboard (#167)
    Setting to store site title (#239)
    Allow logging in with LDAP mail address (#359)

Removed
    Cron job to gather old dashboard metrics (#315)

Fixed
    Cant create backups from web ui (#351)
    Instance host name breadcumb not correct when changing project (#350)


0.11.6 - 30/01/2021

Fixed
    'Cant find image' for instance os not show correctly (#341)

0.11.5 - 30/01/2021

Fixed
    Blindly assuming the instance os image is available blocks UI (#341)

0.11.4 - 17/01/2021

Fixed
    Host being shown as null in operation list when alias not set (#325)

0.11.3 - 15/01/2021

Fixed
    An error with operations socket in snap install

0.11.2 - 14/01/2021

Fixed
    Trying to access undefined property of analytics data when theres no info
    Incorrect calculation for total storage usage
    SNAP not building because of new sqlite3 release

0.11.1 - 13/01/2021

Changed
    Image shown as part of instance details instead of title
    Allow setting memory limit when creating a VM (#330)
    Support subscribing to different project operations socket (#332)

Fixed
    Storage progress bar calculation is incorrect (#333)